Rota específica para o histórico de votos de um user